--- a/DAT107_workshshop_notebook.ipynb
+++ b/DAT107_workshshop_notebook.ipynb
@@ -18,15 +18,48 @@
     "tags": []
    },
    "source": [
-    "#  DAT107 Using vectors with graphs for gen AI apps in Amazon NeptuneAnalytics 🛠️🦄 Workshop/Unicorn Gym "
+    "#  DAT107 Using vectors with graphs for gen AI apps in Amazon NeptuneAnalytics Workshop"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375ff7ce",
+   "metadata": {},
+   "source": [
+    "## Table Of Contents\n",
+    "* [Introduction](##Introduction)\n",
+    "* [Creating Neptune Analytics Graph](##Creating-Neptune-Analytics-Graph)\n",
+    "* [The EDGAR Data Model ](##The-EDGAR-Data-Model)\n",
+    "* [Competitive analysis](##Competitive-analysis)\n",
+    "* [Vector Similarity Search + Graph Traversals](##Vector-Similarity-Search-+-Graph-Traversals)\n",
+    "* [Create conversational agent](##Create-conversational-agent)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a5a89fc",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ab240ac",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "793c4fb4-46c2-416a-87fb-7fc584d1fa05",
    "metadata": {},
    "source": [
-    "## Creating the Neptune Analytics graph"
+    "## Creating Neptune Analytics Graph"
    ]
   },
   {
@@ -36,15 +69,17 @@
    "source": [
     "We will start by creating new graph \n",
     "with AWS CLI command:\n",
+    "<div class=\"alert alert-block alert-info\"> \n",
+    "<details>\n",
+    "    <summary>✏️<b><i> Click here for a tip</i></b></summary>\n",
+    "  AWS CLI commands and other OS CLI commands can be run inside the notebook by using the %%bash magic \n",
+    "</details>\n",
+    "</div>\n",
     "\n",
-    "This command will create graph of Neptune Analytics\n",
-    "with [Memory-Optimized Neptune Capacity Units](https://aws.amazon.com/neptune/pricing/) (m-NCU) of 256 m-NCU and [vector search index](https://docs.aws.amazon.com/neptune-analytics/latest/userguide/vector-index.html#:~:text=You%20can%20only%20create%20a,between%201%20and%2065%2C535%20inclusive.) of 384 dimensions\n",
+    "The following command will create graph of Neptune Analytics\n",
     "\n",
-    "```bash\n",
-    "aws neptune-graph create-graph --graph-name 'edgar' --provisioned-memory 128 --public-connectivity --replica-count 0 --vector-search-configuration '{\"dimension\": 384}'\n",
-    "```\n",
-    "\n",
-    "\n"
+    "1. [Memory-Optimized Neptune Capacity Units](https://aws.amazon.com/neptune/pricing/) (m-NCU) of 256 m-NCU\n",
+    "2. [Vector search index](https://docs.aws.amazon.com/neptune-analytics/latest/userguide/vector-index.html#:~:text=You%20can%20only%20create%20a,between%201%20and%2065%2C535%20inclusive.) of 384 dimensions"
    ]
   },
   {
@@ -90,10 +125,7 @@
    "id": "3086316e-329a-47fe-aac6-9c7a13130f63",
    "metadata": {},
    "source": [
-    "We can also use aws cli to find the new Neptune Analytics grpah\n",
-    "```bash\n",
-    "aws neptune-graph list-graphs\n",
-    "```"
+    "We can also use aws cli to find the new Neptune Analytics graphs\n"
    ]
   },
   {
@@ -106,7 +138,7 @@
    "outputs": [],
    "source": [
     "%%bash \n",
-    "aws  neptune-graph list-graphs"
+    "aws neptune-graph list-graphs"
    ]
   },
   {
@@ -116,9 +148,18 @@
    "source": [
     "\n",
     "\n",
-    "For the next step we need the endpoint of the newly created graph e.g *g-ld86y4dpc4.us-east-1.neptune-graph.amazonaws.com*\n",
-    " We will use notebook magic to update the grpah endpoint for this notebook \n",
-    " \n",
+    "For the next step we need the endpoint of the newly created graph  <br>\n",
+    "In this command example <br>\n",
+    "\n",
+    "```json\n",
+    "\"endpoint\": \"g-ld86y4dpc4.us-east-1.neptune-graph.amazonaws.com\",\n",
+    "```\n",
+    "\n",
+    "We will use notebook magic to update the graph endpoint for this notebook \n",
+    "\n",
+    "Replace the \"[New graph endpoint]\" with the endpoint name\n",
+    "\n",
+    "\n",
     "<div class=\"alert alert-block alert-info\"> \n",
     "<details>\n",
     "    <summary>✏️<b><i> Click here for a tip</i></b></summary>\n",
@@ -198,6 +239,7 @@
     "\n",
     "\n",
     "Investors and analysts commonly review 13F filings to track the investment activities and holdings of some of the highest profile hedge funds, asset managers, pensions funds, and others required to file. Comparing filings quarter-over-quarter can provide clues to investment themes or sectors that institutions are increasing or decreasing their exposure to. While 13F data does have some limitations, it remains one of the most readily accessible sources of information on where major institutional money is being allocated in U.S. equity markets each quarter.\n",
+    "\n",
     "\n",
     "\n",
     "In this notebook we will be looking at data from the [EDGAR system](https://www.sec.gov/edgar/search-and-access) to demonstrate how to leverage, graphs, graph analytics, and vector similarity to perform investment analysis of stock holdings.\n",
@@ -361,9 +403,10 @@
    "id": "f269e6d6-fbc3-4597-94e7-8e2692818e07",
    "metadata": {},
    "source": [
+    "## Competitive analysis\n",
     "Now that we have all our data loaded let's begin by looking at the type of competitive analysis we can perform on this knowledge graph model.\n",
     "\n",
-    "## Finding Similar Investment Portfolios\n",
+    "#### Finding Similar Investment Portfolios\n",
     "\n",
     "For our example here let's investigate how similar the portfolios of the largest investment firms are to one another.  This will allow us to perform a competitive analysis \n",
     "\n",
@@ -375,7 +418,7 @@
    "id": "6d0522df-47cb-468c-a221-564d40d4ad34",
    "metadata": {},
    "source": [
-    "### Find the top 10 companies with the largest holdings"
+    "* Find the top 10 companies with the largest holdings"
    ]
   },
   {
@@ -411,7 +454,7 @@
    },
    "outputs": [],
    "source": [
-    "lst =data['results']\n",
+    "lst=data['results']\n",
     "params = {'hq_id': lst[0]['hq_id'], 'competitors': [l['hq_id'] for l in lst[-9:]]}\n",
     "print(params)"
    ]
@@ -423,7 +466,8 @@
     "tags": []
    },
    "source": [
-    "Using the values above we will now be able to pass these in as parameters to our future queries.  This will not only simplify the queries but it will allow the engine to process them more efficiently."
+    "Using the values above we will now be able to pass these in as parameters to our future queries. \n",
+    "This will not only simplify the queries but it will allow the engine to process them more efficiently."
    ]
   },
   {
@@ -431,7 +475,7 @@
    "id": "1ceeb13d-decf-46ee-b91a-0c9aafa303d5",
    "metadata": {},
    "source": [
-    "Now that we have seen their top investments, let's find all the investments where they have >$1B USD invested."
+    "* Now that we have seen their top investments, let's find all the investments where they have >$1B USD invested."
    ]
   },
   {
@@ -456,7 +500,8 @@
    "id": "17d4d4e2-e016-40e6-855f-c919b960f8dd",
    "metadata": {},
    "source": [
-    "## Compare our top investor against competitors\n",
+    "#### Compare our top investor against competitors\n",
+    "\n",
     "let's see how their investments compare to those of their top competitors.\n",
     "\n",
     "To do this we can approach this using two different mechanisms.\n",
@@ -607,14 +652,14 @@
     "tags": []
    },
    "source": [
-    "## Create conversational client allowing you to ask questions to LLM\n",
+    "## Create conversational agent\n",
     "\n",
     "Now after we finishd using openCypher query integration of the graph , we can try a diffrent metology \n",
     "To provide the end user with information about the graph data we can use LLM and langchain to investigate the graph.   \n",
     "\n",
     "We now will create a **Chat application with Bedrock Claude V3 large language model (LLM)** To Query a Neptune graph using the English Language and return a human readable response \n",
     "\n",
-    "The application can get as an input a question in English Language convert the question to OpenCypher running the OpenCypher query and return the result as an English Language answer \n",
+    "The application can get as an input a question in English Language convert the question to OpenCypher query running the OpenCypher query and return the result as an English Language answer \n",
     "\n",
     "\n",
     "![image.png](attachment:193d9646-28f8-4b6d-a91b-3c24cc57e23e.png)\n",
