--- a/lab/DAT107_workshshop_notebook.ipynb
+++ b/lab/DAT107_workshshop_notebook.ipynb
@@ -52,7 +52,10 @@
    "cell_type": "markdown",
    "id": "5ab240ac",
    "metadata": {},
-   "source": []
+   "source": [
+    "Vector formats and as contextual graph representations. Amazon Neptune Analytics is a new analytics database engine that lets users combine vector data with graphs \n",
+    "making it an ideal fit for augmenting Retrieval Augmented Generation (RAG) applications with contextually relevant information. Join us as we live code a sample application demonstrating how to build a RAG application that uses vector similarity search with graph traversals and algorithms using Neptune Analytics. Also explore developments in generative AI by demonstrating graph query generation using LangChain."
+   ]
   },
   {
    "cell_type": "markdown",
