--- a/lab/DAT107_workshshop_notebook.ipynb
+++ b/lab/DAT107_workshshop_notebook.ipynb
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "aws neptune-graph create-graph --graph-name 'edgar2' --provisioned-memory 128 --public-connectivity --replica-count 0 --vector-search-configuration '{\"dimension\": 384}'"
+    "aws neptune-graph create-graph --graph-name 'edgar2' --provisioned-memory 256 --public-connectivity --replica-count 0 --vector-search-configuration '{\"dimension\": 384}'"
    ]
   },
   {
@@ -198,28 +198,11 @@
     "  \"host\": \"[New graph endpoint]\",\n",
     "  \"neptune_service\": \"neptune-graph\",\n",
     "  \"port\": 8182,\n",
-    "  \"proxy_host\": \"\",\n",
-    "  \"proxy_port\": 8182,\n",
     "  \"auth_mode\": \"IAM\",\n",
     "  \"load_from_s3_arn\": \"\",\n",
     "  \"ssl\": true,\n",
     "  \"ssl_verify\": true,\n",
-    "  \"aws_region\": \"us-east-1\",\n",
-    "  \"sparql\": {\n",
-    "    \"path\": \"sparql\"\n",
-    "  },\n",
-    "  \"gremlin\": {\n",
-    "    \"traversal_source\": \"g\",\n",
-    "    \"username\": \"\",\n",
-    "    \"password\": \"\",\n",
-    "    \"message_serializer\": \"graphsonv3\"\n",
-    "  },\n",
-    "  \"neo4j\": {\n",
-    "    \"username\": \"neo4j\",\n",
-    "    \"password\": \"password\",\n",
-    "    \"auth\": true,\n",
-    "    \"database\": null\n",
-    "  }\n",
+    "  \"aws_region\": \"us-east-1\"\n",
     "}"
    ]
   },
@@ -356,14 +339,8 @@
    },
    "outputs": [],
    "source": [
-    "import graph_notebook as gn\n",
-    "config = gn.configuration.get_config.get_config()\n",
-    "\n",
-    "s3_bucket = f\"s3://aws-neptune-customer-samples-{config.aws_region}/sample-datasets/gremlin/edgar/\"\n",
-    "region = config.aws_region\n",
-    "load_arn = config.load_from_s3_arn\n",
-    "\n",
-    "print(s3_bucket)\n"
+    "s3_bucket = f\"s3://aws-neptune-customer-samples-us-east-1/sample-datasets/gremlin/edgar/\"\n",
+    "print(s3_bucket)"
    ]
   },
   {
